fix: Add aria-label for buttons, fix bg colors and colors, container for popup, link for profile image, spacing in footer

--- a/blocks/element/__like-button/_active/element__like-button_active.css
+++ b/blocks/element/__like-button/_active/element__like-button_active.css
@@ -1,3 +1,3 @@
 .element__like-button_active {
-    background: var(--white-color) url("../../../../images/icons/heart-active.svg") no-repeat center center;
+    background: transparent url("../../../../images/icons/heart-active.svg") no-repeat center center;
 }
