--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -5,7 +5,7 @@
     width: 22px;
     height: 19px;
     transition: opacity 0.2s ease;
-    background: var(--white-color) url("../../../images/icons/heart-disabled.svg") no-repeat center center;
+    background: transparent url("../../../images/icons/heart-disabled.svg") no-repeat center center;
 }
 
 .element__like-button:hover {
