--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,6 +4,9 @@
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     padding: 34px 36px 37px;
+    max-width: 430px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 767px) {
