--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,12 +1,10 @@
 .popup__input {
     border: none;
-    border-bottom: 1px solid var(--gray-color);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     padding: 0 0 10px 0;
-
-    /*color: #000000;*/
 }
 .popup__input:first-of-type {
     margin-bottom: 30px;
