--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,7 @@
 .profile__add-button {
     margin-left: auto;
     border: 2px solid var(--white-color);
+    border-radius: 2px;
     background: transparent url("../../../images/icons/plus-icon.svg") no-repeat center center;
     height: 50px;
     min-width: 150px;
